# rocstories-combined

./: .env_example  .gitignore  .pre-commit-config.yaml  README.md  devcontainer.Dockerfile  pyproject.toml
.devcontainer/: devcontainer.json
notebooks/: infer.ipynb
src/dataset/: pipelines.py
src/eval/: evaluate.py  prediction.py  utils.py
