[tool.poetry]
name = "llm-sentence-ordering"
version = "0.1.0"
description = "Evaluating LLMs on sentence ordering"
packages = [
    { include = "dataset", from = "src" },
    { include = "eval", from = "src" },
]
authors = ["Shawon Ashraf"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.0"
wandb = "^0.17.2"
openai = "^1.34.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
